# auxml

./: .gitignore  Makefile  README.md  design.org  design.xml  docs.md  pyproject.toml  readme.xml
.github/workflows/: python-app.yml
examples/: serve_livereload.py
examples/auxml-src/: example1.xml  webpage.xml
examples/macro-definitions/: example1.xml  pb100-macros.xml  webpage-macros.xml
src/auxml/: cmdline.py  defmacro.py  directive.py  err.py  example.py  html_tags.py  macro.py  macro_manager.py  main.py  parser.py  patchup.py  util.py
tests/: fileinfo_test.py  macro_test.py  macrofile1.html  main_test.py  multiarg_test.py
tests/test-html/: macros-fileinfo-1.html  macros-multiargs.html  multifile.html
